<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatWindow">

    <ListView
        android:id="@+id/activityChatWindowListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activityChatWindowSendButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-2dp" />

    <EditText
        android:id="@+id/activityChatWindowTextMessageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/activityChatWindowSendButton"/>
    <Button
        android:id="@+id/activityChatWindowSendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        />


</RelativeLayout>