<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">
    <TextView
        android:text="@string/login"
        android:id="@+id/activityLoginTextViewLogin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
    </TextView>
    <EditText
        android:id="@+id/activityLoginEditTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/login_name">
    </EditText>
    <TextView
        android:text="@string/password"
        android:id="@+id/activityLoginTextViewPassword"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
    </TextView>
    <EditText
        android:id="@+id/activityLoginEditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword">
    </EditText>
    <Button
        android:id="@+id/activityLoginButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login">
    </Button>
</LinearLayout>