<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_rpg_24"
        />
    <EditText
        android:id="@+id/alert_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</RelativeLayout>